# ask_me

./: .env.example  .gitignore  README.md  how to run.md  idea.md  pyproject.toml
src/: frontend.py  nono.py  rag.py  rag_implementation.py  ragg.ipynb  server.py  utils.py
src/base/: base_rag.py  logger.py  rag.py
